--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,14 +1,16 @@
-<section class="section">
+<section class="section py-3">
     <div class="container-fluid">
         @if (placeholerLoading) {
-        <app-placholder-loading />
+            <app-placholder-loading [classInput]="'col-6 col-md-3 col-lg-2'" [numberBoxes]="12" />
         }
         @else {
         <div class="row">
             <div class="col-sm-12 col-md-7 col-lg-7  mx-auto">
                 <div class="d-flex justify-content-between py-3">
                     <p class="text-muted fw-medium">Total items: {{productsInCart.products.length}} items</p>
-                    <button (click)="clearAll()" class="bg-light text-danger border-0 px-3">Clear All</button>
+                    @if(productsInCart.products.length > 0){
+                        <button (click)="clearAll()" class="bg-light text-danger border-0 px-3">Clear All</button>
+                    }
                 </div>
                 @for (productInCart of productsInCart.products; track $index) {
                 <div class="d-flex justify-content-around  align-items-center my-1">
@@ -35,36 +37,42 @@
                 </div>
                 <hr>
                 }
+                @empty {
+                    <h3>No products added to bag</h3>
+                    <a class="text-black" routerLink="/products">Go to Shopping</a>
+                }
 
             </div>
-            <div class="col-sm-12 col-md-3  col-lg-3 mx-auto fit-hight-content py-3 py-sm-4">
+            @if(productsInCart.products.length > 0){
+                <div class="col-sm-12 col-md-3  col-lg-3 mx-auto fit-hight-content py-3 py-sm-4">
 
-                <div class="d-flex justify-content-between">
-                    <p class="text-muted fw-normal">Subtotal </p>
-                    <p class="text-muted fw-normal"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <p class="text-muted fw-normal">Delivery </p>
-                    <p class="text-muted fw-normal">Free</p>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <p class="text-black fw-medium my-0">Total </p>
-                        <p class="text-muted my-0 fs-small fw-light">Taxes included </p>
+                    <div class="d-flex justify-content-between">
+                        <p class="text-muted fw-normal">Subtotal </p>
+                        <p class="text-muted fw-normal"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
                     </div>
-                    <p class="fw-medium"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
+                    <div class="d-flex justify-content-between">
+                        <p class="text-muted fw-normal">Delivery </p>
+                        <p class="text-muted fw-normal">Free</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <p class="text-black fw-medium my-0">Total </p>
+                            <p class="text-muted my-0 fs-small fw-light">Taxes included </p>
+                        </div>
+                        <p class="fw-medium"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
+                    </div>
+                    <button [routerLink]="['/checkout', productsInCart._id]"
+                        class="my-4 w-100 btn-special text-white border-0 py-2 fs-6">Checkout</button>
+                    <div class="d-flex my-1">
+                        <i class="fa-solid fa-check me-2 "></i>
+                        <p class="fs-small">Free home delivery for orders over EGP 4,000.</p>
+                    </div>
+                    <div class="d-flex my-1">
+                        <i class="fa-solid fa-check me-2 "></i>
+                        <p class="fs-small">Free returns in 14 days.</p>
+                    </div>
                 </div>
-                <button [routerLink]="['/checkout', productsInCart._id]"
-                    class="my-4 w-100 btn-special text-white border-0 py-2 fs-6">Checkout</button>
-                <div class="d-flex my-1">
-                    <i class="fa-solid fa-check me-2 "></i>
-                    <p class="fs-small">Free home delivery for orders over EGP 4,000.</p>
-                </div>
-                <div class="d-flex my-1">
-                    <i class="fa-solid fa-check me-2 "></i>
-                    <p class="fs-small">Free returns in 14 days.</p>
-                </div>
-            </div>
+            }
         </div>
         }
 
