--- a/src/app/components/notfound/notfound.component.html
+++ b/src/app/components/notfound/notfound.component.html
@@ -1,1 +1,7 @@
-<p>notfound works!</p>
+<section class="section d-flex justify-content-center align-items-center text-center">
+    <div>
+        <h3 class=" fw-medium h1">404 </h3>
+        <h1 class="text-muted my-2">Page Not Found</h1>
+        <a class="text-black h5 " routerLink="/products">Go back to Home</a>
+    </div>
+</section>
