--- a/src/app/components/placholder-loading/placholder-loading.component.html
+++ b/src/app/components/placholder-loading/placholder-loading.component.html
@@ -1,6 +1,6 @@
 <div class="row g-3">
-    @for (item of [1,2,3,4,5,6,7 ,8]; track $index) {
-    <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+    @for (item of arrLoading; track $index) {
+    <div [class]="classInput" >
         <div class="card rounded-0" aria-hidden="true">
             <img src="./assets/loadingImage.jfif" class="card-img-top" alt="loading image">
             <div class="card-body">
