--- a/src/app/components/related-product/related-product.component.html
+++ b/src/app/components/related-product/related-product.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid py-5">
-    <h3 class="h5 fw-normal">Related products </h3>
     @if(placholderLoading){
     <app-placholder-loading />
     }@else {
     <div class="row g-3">
+        <h3 class="h5 fw-medium my-4">Related products </h3>
         @for (product of relatedProducts; track product.id; ) {
         <div class=" col-6 col-sm-6 col-md-4 col-lg-2 ">
             <div class=" product position-relative">
