--- a/src/app/components/guest-navbar/guest-navbar.component.html
+++ b/src/app/components/guest-navbar/guest-navbar.component.html
@@ -1,24 +1,19 @@
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg   py-3">
   <div class="container-fluid">
-    <a class="nav-link" routerLink="/">
-      <h1 class="navbar-brand fw-medium fs-4">E-COMMERCE</h1>
-    </a>
-    <button class="bg-transparent text-black border-0 d-lg-none " type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-      aria-label="Toggle navigation">
+    <a class="navbar-brand fs-4 fw-semibold" routerLink="/">E-commerce</a>
+    <button class="bg-transparent border-0 text-black d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-cente f">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link mx-1 text-black fs-small fw-medium p-1 fit-content" aria-current="page"
-            routerLinkActive=" border-bottom border-1 border-black" routerLink="/register">CREATE ACCOUNT</a>
+          <a class="nav-link fw-normal text-black fw-medium" aria-current="page" routerLink="/register">CREATE ACCOUNT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mx-1 text-black fs-small fw-medium  p-1 fit-content " aria-current="page"
-            routerLinkActive=" border-bottom border-1 border-black" routerLink="/login">LOG IN</a>
+          <a class="nav-link fw-normal text-black fw-medium " aria-current="page" routerLink="/login">LOG IN</a>
         </li>
+
       </ul>
     </div>
   </div>
