--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section py-5">
   <div class="w-custom mx-auto">
     <h3 class="fs-5 fw-semibold">Sign in </h3>
     <form class="mb-2" (ngSubmit)="sendData()" [formGroup]="loginForm">
@@ -44,7 +44,7 @@
 
       </button>
       <a routerLink="/register" type="button"
-        class="border-1 border-black border text-center text-black text-decoration-none btn-outline-special py-2 w-100 rounded-1 mt-2 mb-3 fs-6 fw-normal ">
+        class="border-1 border-black border text-center text-black text-decoration-none btn-outline-special py-3 w-100 rounded-1 mt-2 mb-3 fs-6 fw-normal ">
         Create Account
       </a>
       <div class="d-flex justify-content-center">
