--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section py-5">
   <div class="w-custom mx-auto">
     <h3 class="fs-5 fw-semibold">Create your account </h3>
     <form class="mb-2" (ngSubmit)="sendData()" [formGroup]="registerForm">
