--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,7 +1,7 @@
 <section class="section py-3">
     <div class="container-fluid">
         @if (placeholerLoading) {
-            <app-placholder-loading [classInput]="'col-6 col-md-3 col-lg-2'" [numberBoxes]="12" />
+            <app-cart-loading/>
         }
         @else {
         <div class="row">
@@ -9,73 +9,70 @@
                 <div class="d-flex justify-content-between py-3">
                     <p class="text-muted fw-medium">Total items: {{productsInCart.products.length}} items</p>
                     @if(productsInCart.products.length > 0){
-                        <button (click)="clearAll()" class="bg-light text-danger border-0 px-3">Clear All</button>
+                    <button (click)="clearAll()" class="bg-light text-danger border-0 px-3">Clear All</button>
                     }
                 </div>
                 @for (productInCart of productsInCart.products; track $index) {
-                <div class="d-flex justify-content-around  align-items-center my-1">
-                    <img [src]="productInCart.product.imageCover" style="width: 80px"
+                <div class="d-flex justify-content-around  align-items-center my-1 ">
+                    <img [src]="productInCart.product.imageCover" style="width: 40px"
                         [alt]="productInCart.product.title">
-                    <h3 class="h6 fw-medium">{{productInCart.product.title.split(' ',2).join(' ')}}</h3>
-                    <p class=" fw-medium">{{productInCart.product.brand.name}}</p>
+                    <p class="fs-small fw-medium">{{productInCart.product.title.split(' ',2).join(' ')}}</p>
                     <p class="fw-medium fs-small">EGP {{productInCart.price}}</p>
                     <div class="d-flex">
                         <button (click)="updateQuantity(productInCart.product.id,productInCart.count + 1)"
-                            class="p-2 bg-light fw-bold border-0 fs-small"><i class="fa-solid fa-plus"></i></button>
-                        <input readonly disabled class="text-center" style="width: 30px" type="text"
+                            class="p-1 bg-light fw-bold border-0 fs-small"><i
+                                class="fa-solid fs-small fa-plus"></i></button>
+                        <input readonly disabled class="text-center" style="width: 20px" type="text"
                             [value]="productInCart.count">
                         <button (click)="updateQuantity(productInCart.product.id,--productInCart.count - 1)"
-                            class="p-2 bg-light fw-bold border-0 fs-small"><i class="fa-solid fa-minus"></i></button>
+                            class="p-1 bg-light fw-bold border-0 fs-small"><i
+                                class="fa-solid fs-small fa-minus"></i></button>
                     </div>
-                    <div class="d-flex">
-                        <i (click)="addToFavarite(productInCart.product.id)"
-                            class="fa-solid fa-heart me-2 fs-5 align-items-center "></i>
-                        <span (click)="removeProductFromCart(productInCart.product.id)"
-                            class="text-danger bg-light px-2">Remove</span>
-                    </div>
-
+                    <span (click)="removeProductFromCart(productInCart.product.id)" class="text-danger bg-light px-2"><i
+                            class="fa-solid fa-trash"></i></span>
                 </div>
+
                 <hr>
                 }
                 @empty {
-                    <h3>No products added to bag</h3>
-                    <a class="text-black" routerLink="/products">Go to Shopping</a>
+                <h3>No products added to bag</h3>
+                <a class="text-black" routerLink="/products">Go to Shopping</a>
                 }
 
             </div>
             @if(productsInCart.products.length > 0){
-                <div class="col-sm-12 col-md-3  col-lg-3 mx-auto fit-hight-content py-3 py-sm-4">
+            <div class="col-sm-12 col-md-3  col-lg-3 mx-auto fit-hight-content py-3 py-sm-4">
 
-                    <div class="d-flex justify-content-between">
-                        <p class="text-muted fw-normal">Subtotal </p>
-                        <p class="text-muted fw-normal"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <p class="text-muted fw-normal">Delivery </p>
-                        <p class="text-muted fw-normal">Free</p>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <p class="text-black fw-medium my-0">Total </p>
-                            <p class="text-muted my-0 fs-small fw-light">Taxes included </p>
-                        </div>
-                        <p class="fw-medium"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
-                    </div>
-                    <button [routerLink]="['/checkout', productsInCart._id]"
-                        class="my-4 w-100 btn-special text-white border-0 py-2 fs-6">Checkout</button>
-                    <div class="d-flex my-1">
-                        <i class="fa-solid fa-check me-2 "></i>
-                        <p class="fs-small">Free home delivery for orders over EGP 4,000.</p>
-                    </div>
-                    <div class="d-flex my-1">
-                        <i class="fa-solid fa-check me-2 "></i>
-                        <p class="fs-small">Free returns in 14 days.</p>
-                    </div>
+                <div class="d-flex justify-content-between">
+                    <p class="text-muted fw-normal">Subtotal </p>
+                    <p class="text-muted fw-normal"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
                 </div>
+                <div class="d-flex justify-content-between">
+                    <p class="text-muted fw-normal">Delivery </p>
+                    <p class="text-muted fw-normal">Free</p>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <p class="text-black fw-medium my-0">Total </p>
+                        <p class="text-muted my-0 fs-small fw-light">Taxes included </p>
+                    </div>
+                    <p class="fw-medium"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
+                </div>
+                <button [routerLink]="['/checkout', productsInCart._id]"
+                    class="my-4 w-100 btn-special text-white border-0 py-2 fs-6">Checkout</button>
+                <div class="d-flex my-1">
+                    <i class="fa-solid fa-check me-2 "></i>
+                    <p class="fs-small">Free home delivery for orders over EGP 4,000.</p>
+                </div>
+                <div class="d-flex my-1">
+                    <i class="fa-solid fa-check me-2 "></i>
+                    <p class="fs-small">Free returns in 14 days.</p>
+                </div>
+            </div>
             }
         </div>
         }
 
     </div>
 </section>
-<app-action-loading [loading]="isLoading"/>
+<app-action-loading [loading]="isLoading" />
