--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -44,7 +44,7 @@
                 </div>
                 <button (click)="addToCart(product.id)"
                     class="w-100 btn-special text-white rounded-0 my-3 fs-6 py-2 border-0">ADD TO BAG</button>
-                <button (click)="addToCart(product.id)"
+                <button (click)="addToFavarite(product.id)"
                     class="w-100 btn-outline-special text-black border border-black border-1 rounded-0 fs-6 py-2">ADD TO
                     FAVARITES</button>
                 <p class="fw-normal my-4">{{product.description}}</p>
