--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -43,10 +43,23 @@
                     <p class="fw-medium ms-2">{{product.ratingsQuantity}} rate</p>
                 </div>
                 <button (click)="addToCart(product.id)"
-                    class="w-100 btn-special text-white rounded-0 my-3 fs-6 py-2 border-0">ADD TO BAG</button>
+                    class="w-100 btn-special text-white rounded-0 my-3 fs-6 py-2 border-0">
+                    <span>ADD TO BAG </span>
+                    @if (isLoadingCart) {
+                    <div class="spinner-border spinner-border-sm" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    }
+                </button>
                 <button (click)="addToFavarite(product.id)"
                     class="w-100 btn-outline-special text-black border border-black border-1 rounded-0 fs-6 py-2">ADD TO
-                    FAVARITES</button>
+                    <span>FAVARITES </span>
+                    @if (isLoadingFavarite) {
+                    <div class="spinner-border spinner-border-sm" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    }
+                </button>
                 <p class="fw-normal my-4">{{product.description}}</p>
                 <div class="d-flex">
                     <p class="bg-light p-2 rounded-1 mx-1 text-gray">{{product.category.name}}</p>
@@ -82,7 +95,5 @@
         </div>
         }
     </div>
-    <app-related-product  [category]="product.category.name" [brand]="product.brand.name" />
+    <app-related-product [category]="product.category.name" [brand]="product.brand.name" />
 </section>
-
-<app-action-loading [loading]="isLoading"/>
