--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -17,12 +17,12 @@
         <h3 class="my-4 h5 text-muted fw-medium">There are no products.</h3>
         }
         @if(placholderLoading){
-        <app-placholder-loading [numberBoxes]="8" [styleImage]="'min-height: 435px'" [classInput]="'col-6 col-sm-6 col-md-4 col-lg-3'"/>
+        <app-placholder-loading [numberBoxes]="8" [classInput]="'col-6 col-sm-6 col-md-4 col-lg-3'"/>
         }
         <div class="row g-3">
             @for (product of prodcuts | search : searchword; track product.id) {
             <div class=" col-6 col-sm-6 col-md-4 col-lg-3 ">
-                <app-product-grid [product]="product" [styleImage]="'min-height: 435px'" />
+                <app-product-grid [product]="product" />
             </div>
             }
             <!-- Pagination    -->
