--- a/src/app/components/product-grid/product-grid.component.html
+++ b/src/app/components/product-grid/product-grid.component.html
@@ -2,7 +2,7 @@
     <div [style]="styleImage">
         <img [routerLink]="['/products', product.id]" [src]="inFavarite?product.imageCover :product.images[0]" class="w-100 pointer" [alt]="product.title">
     </div>
-    <span class="position-absolute py-1 px-2 rounded-circle end-0 top-0 m-4 fs-5 bg-light">
+    <span class="position-absolute p-1 fs-small rounded-circle end-0 top-0 m-4  bg-light">
         @if(!isLoadingFavarite){
             @if(inFavarite){
                 <i (click)="removeFromFavarite(product.id)" class="fa-solid fa-heart text-danger"></i>
