--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -30,9 +30,19 @@
         }
       </div>
       <div class="form-floating my-3">
-        <input id="password" type="password" class="form-control rounded-0 border-gray px-3 w-100 py-3 border border-1"
-          placeholder="Password" formControlName="password" />
+        <input id="password" [type]="hidden? 'password':'text'"
+          class="form-control rounded-0 border-gray px-3 w-100 py-3 border border-1" placeholder="Password"
+          formControlName="password" />
         <label for="password">Password</label>
+        <div class="d-flex justify-content-end py-2">
+          <span class=" fs-small fw-medium text-muted " (click)="toggleAttribute()">
+            @if (hidden) {
+            show password
+            }@else {
+            hidden password
+            }
+          </span>
+        </div>
 
         @if ((registerForm.get('password')?.touched || registerForm.get('password')?.dirty) &&
         registerForm.get('password')?.errors) {
@@ -45,7 +55,7 @@
         }
       </div>
       <div class="form-floating my-3">
-        <input id="rePassword" type="password"
+        <input id="rePassword" [type]="hidden? 'password':'text'"
           class="form-control rounded-0 border-gray px-3 w-100 py-3 border border-1" placeholder="Conferm Password"
           formControlName="rePassword" />
         <label for="rePassword">Confirm Password</label>
